# symstatic

./: .gitignore  CMakeLists.txt
src/: ast.cc  ast.hh  evaluator.cc  evaluator.hh  lexer.cc  lexer.hh  libraries.hh  main.cc  object.cc  object.hh  parser.cc  parser.hh  token.cc  token.hh
src/lang/: evaluator.cc  evaluator.hh  parser.cc  parser.hh  token.hh
test/: CMakeLists.txt  eval-tests.cc  lexer-tests.cc
